# mini_notes

./: .gitignore  Cargo.toml  README.md  my_mininotes.ron  my_mininotes.txt
src/: gui.rs  lib.rs  main.rs  note.rs  util.rs
