[package]
name = "mini_notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
chrono = "0.4"
flexi_logger = "0.23"
log = "0.4"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",           # Lets you generate random UUIDs
    "fast-rng",     # Use a faster (but still sufficiently random) RNG
	"serde",		# adds the ability to serialize and deserialize a UUID using serde
]
